# CRUD_PYTHON

./: README.md  docker-compose.yml  pyproject.toml
backend/: router.py
